--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -333,6 +333,7 @@ button,
     display: none;
   }
   background: none;
+  float: right;
   color: $linkColour;
   margin-bottom: 0;
   min-height: 4rem;
